# miac_api

./: Cargo.toml  README.md  main.py
base/: __init__.py  access.py  active.py  choice.py  people.py  tasks.py  users.py
clas/: Access.py  Choice.py  Command.py  Dir.py  Task.py  User.py  __init__.py
conf/: __init__.py  config.py  tags_metadata.py
migrations/: 001_create_tables.sql  001_create_users.sql
reqs/: __init__.py  access.py  app.py  choice.py  command.py  database.py  dir.py  favicon.py  task.py  user.py
src/: create_tables.rs  main.rs  services.rs
src/access/: access_create.rs  access_delete.rs  access_get_all.rs  mod.rs
src/base/: create_tables.rs
src/base/sql/: users.sql
src/commands/: command_create.rs  command_get_all.rs  command_update.rs  mod.rs
src/dirs/: dir_create.rs  dir_get_all.rs  dir_update.rs  mod.rs
src/files/: file_add.rs  file_download.rs  file_get_list.rs  mod.rs
src/html/: commands.rs  dirs.rs  login.rs  mod.rs  users.rs
src/models/: user.rs
src/sql/: roles_table.sql  users_table.sql
src/user/: mod.rs  user_login.rs  users.rs
src/users/: check_token.rs  drop_token.rs  login.rs  mod.rs  update_password.rs  user_create.rs  user_get.rs  user_get_all.rs  user_update.rs
src/web/: bot_admin.rs  images.rs  login.rs  mod.rs  xp_alert.rs
static/: bot_admin.html  commands.html  directories.html  login.html  users.html
static/css/: login.css
static/js/: commands.js  directories.js  login.js  logout.js  users.js
