[package]
name = "miac_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "uuid"] }
sqlx_migrator = "0.12.0"
bcrypt = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
