[package]
name = "miac_api"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx ={version =  "0.8.2", features = ["postgres", "chrono", "runtime-async-std", "runtime-tokio"]}
dotenv = "0.15"
rocket = {version = "0.5.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
cuid = "1.3"
chrono = { version = "0.4", features = ["serde"] }
